Atualizando código do botão no arquivo javascript

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
         atendimento ao cliente e análise de dados, tanto no Brasil quanto no exterior. 
         Sou apaixonado por viagens, idiomas e experiências que conectam pessoas. 
         Esse site faz parte de um trabalho de faculdade! <br></p>
-        <br>   
-        <button>Clique para ver uma mensagem!</button>
+        <br>
+        <div id="container">   
+        <button id="botao">Clique para ver uma mensagem!</button>
+        </div>
         <br><br>
         <div class="caixa">
         <h2>Eu gosto de: </h2>
@@ -68,6 +70,7 @@
         </div><br>
     <a href="https://www.neopets.com" target="_blank">NEOPETS</a> <!--HTML requisito 6 -->
 
+    <script src="script.js"></script>
 </body>
 </html>
 
